# SEPM_4_semester

./: CMakeLists.txt  Lab_4.ipynb
build_final/: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake
build_final/lab1/: Makefile  cmake_install.cmake
build_final/lab2/: Makefile  cmake_install.cmake
lab1/: CMakeLists.txt
lab1/src/: INT_MAX.cpp  INT_MIN.cpp  comprasion.cpp  heap.cpp  how_int.cpp  how_unsigned.cpp  list.cpp  merge.cpp  point1.cpp  point2.cpp  point3.cpp  point4.cpp  point5.cpp  point6.cpp  vector.cpp
lab2/: CMakeLists.txt
lab2/src/: lab2_list.cpp  lab2_vector.cpp  list.v2_0.cpp  matrix.cpp
