add_executable(lab1_exe src/main.cpp)
target_include_directories(lab1_exe PUBLIC include)

include_directories(include)

add_executable(point1_exe src/point1.cpp)
add_executable(point2_exe src/point2.cpp)
add_executable(point3_exe src/point3.cpp)
add_executable(point4_exe src/point4.cpp)
add_executable(point5_exe src/point5.cpp)
add_executable(point6_exe src/point6.cpp)
add_executable(vector_exe src/vector.cpp)
add_executable(list_exe   src/list.cpp)
add_executable(heap_exe   src/heap.cpp)
add_executable(merge_exe  src/merge.cpp)
add_executable(int_max_exe src/INT_MAX.cpp)
add_executable(int_min_exe src/INT_MIN.cpp)
add_executable(how_int_exe src/how_int.cpp)
add_executable(how_unsigned_exe src/how_unsigned.cpp)
add_executable(comprasion_exe src/comprasion.cpp)